@@ -8,6 +8,7 @@ DFHack Future
     New plugins
     New scripts
         view-item-info: adds information and customisable descriptions to item viewscreens
+        save-output:  saves output of a command to a file, eg for workflow list-commands
     New tweaks
     New features
         dwarfmonitor date format can be modified (see Readme)
